--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"author": "Jack Hsu",
 	"license": "ISC",
 	"dependencies": {
-		"prop-types": "^15.6.0"
+		"prop-types": "^15.6.0",
+		"deprecated-react-native-prop-types": "5.0.0"
 	}
 }
